--- a/mint-site-project/package.json
+++ b/mint-site-project/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3-onboard/core": "^2.6.0",
+    "@web3-onboard/injected-wallets": "^2.0.15",
+    "@web3-onboard/react": "^2.2.5",
+    "ethers": "^5.6.9",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
