--- a/mint-site-project/.gitignore
+++ b/mint-site-project/.gitignore
@@ -37,3 +37,26 @@ next-env.d.ts
 
 # secrets
 .env
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+#Hardhat files
+cache
+artifacts
+
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+#Hardhat files
+cache
+artifacts
+
