--- a/mint-site-project/package.json
+++ b/mint-site-project/package.json
@@ -14,9 +14,12 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
+    "@web3-onboard/coinbase": "^2.1.2",
     "@web3-onboard/core": "^2.6.0",
+    "@web3-onboard/fortmatic": "^2.0.13",
     "@web3-onboard/injected-wallets": "^2.0.15",
-    "@web3-onboard/react": "^2.2.5",
+    "@web3-onboard/react": "^2.3.4",
+    "@web3-onboard/walletconnect": "^2.1.2",
     "chai": "^4.3.6",
     "dotenv": "^16.0.2",
     "ethereum-waffle": "^3.4.4",
