added deployment details

--- a/mint-site-project/package.json
+++ b/mint-site-project/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.6",
+    "@netlify/plugin-nextjs": "^4.23.1",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
